app/core/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  namespace: app
spec:
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: legendmt25/code-help:core-0.0.1-SNAPSHOT
          resources:
            limits:
              memory: '1Gi'
              cpu: '500m'
          ports:
            - name: http
              containerPort: 3000
