app/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: core
  ports:
    - name: http
      port: 80
      targetPort: 3000
