app/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: '128k'
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: www.core.195063.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: core-service
                port:
                  number: 80
